# OpenGLEngine

./: .gitignore  CMakeLists.txt  README.md
AssetClass/: GBuffer.cpp  GBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OmnidirectionalShadowMap.cpp  OmnidirectionalShadowMap.h  RenderTarget.cpp  RenderTarget.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h
Component/: Camera.cpp  Camera.h  ComponentBase.cpp  ComponentBase.h  HDRISkybox.cpp  HDRISkybox.h  PostProcessing.cpp  PostProcessing.h  Skybox.cpp  Skybox.h
Component/Light/: DirectionalLight.cpp  DirectionalLight.h  LightBase.cpp  LightBase.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Component/Renderer/: BatchModelRenderer.cpp  BatchModelRenderer.h  MeshRenderer.cpp  MeshRenderer.h  ModelRenderer.cpp  ModelRenderer.h  Renderer.h
Config/: Config.h.in
Core/: Application.cpp  Application.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Time.cpp  Time.h  Transform.cpp  Transform.h
Core/Subsystems/: DebugInfoSubsystem.cpp  DebugInfoSubsystem.h  InputSubsystem.cpp  InputSubsystem.h  PostInputSubsystem.cpp  PostInputSubsystem.h  RenderPipelineSubsystem.cpp  RenderPipelineSubsystem.h  SceneSubsystem.cpp  SceneSubsystem.h  SubsystemBase.h  TimeSubsystem.cpp  TimeSubsystem.h
Core/Subsystems/EditorUI/: EditorUISubsystem.cpp  EditorUISubsystem.h
Core/Subsystems/PlayerLoopSubsystems/: FixedTickSubsystem.cpp  FixedTickSubsystem.h  TickSubsystem.cpp  TickSubsystem.h
Game/Components/: CameraMovement.cpp  CameraMovement.h  PBRMaterialParams.cpp  PBRMaterialParams.h  PhysicsTickTest.cpp  PhysicsTickTest.h  PostEffect.cpp  PostEffect.h
Game/Scenes/: FirstScene.cpp  FirstScene.h
Graphic/: BufferObject.cpp  BufferObject.h  Graphics.cpp  Graphics.h  VertexArrayObject.cpp  VertexArrayObject.h
Main/: AppMain.cpp  AppMain.h  WinMain.cpp  main.cpp
Managers/: CameraManager.cpp  CameraManager.h  LightsManager.cpp  LightsManager.h  ManagerBase.h  SubsystemManager.cpp  SubsystemManager.h
Misc/: Cursor.cpp  Cursor.h  Debug.cpp  Debug.h  DelegateHandle.cpp  DelegateHandle.h  File.cpp  File.h  Math.h  MulticastDelegate.h  RenderSetting.h  Screen.cpp  Screen.h  StringUtil.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
Platform/: WindowsPlatform.cpp  WindowsPlatform.h
Render/: Material.cpp  Material.h  RenderPass.h  Shader.cpp  Shader.h  ShaderUtil.cpp  ShaderUtil.h  TestAndBlendDesc.h
Resources/Models/: Box.txtm  Quad.txtm
Resources/Models/LowPoly/Forest/: Daffodil1.mtl  Grass1.mtl  Grass2.mtl  Hyacinth1.mtl  Meadow_Bumpy_1.mtl  Meadow_Flat_1.mtl  Meadow_Flat_2.mtl  Meadow_WithPath_1.mtl  Mountain1.mtl  Mountain2.mtl  Mushroom_Orange_1.mtl  Mushroom_Orange_2.mtl  Mushroom_Purple_1.mtl  Mushroom_Purple_2.mtl  Rock1.mtl  Rock2.mtl  Rock3.mtl  Rock4.mtl  Sunflower1.mtl  Tree1.mtl  Tree2.mtl  Tree3.mtl  Tree4.mtl
Resources/Models/LowPoly/lamps-pack/: Lamp1.mtl
Resources/SceneData/: Lamp1.transvector  Lamp2.transvector  Lamp3.transvector  Lamp4.transvector  Lamp5.transvector  Meadow_Bumpy_1.transvector  Meadow_Flat_1.transvector  Meadow_Flat_2.transvector  Mountain1.transvector  Mountain2.transvector  PointLight_Lamp.transvector  Rock4.transvector  Tree1.transvector  Tree2.transvector  Tree3.transvector  Tree4.transvector
Shaders/FlxShader/Deferred/BatchGBuffer/: BatchGBuffer.frag.glsl  BatchGBuffer.vert.glsl
Shaders/FlxShader/Deferred/GBuffer/: GBuffer.frag.glsl  GBuffer.vert.glsl
Shaders/FlxShader/Deferred/LightingPass/: LightingPass.frag.glsl
Shaders/FlxShader/Deferred/Ocean/: Ocean.frag.glsl  Ocean.vert.glsl
Shaders/FlxShader/Deferred/SSAO/: SSAO.frag.glsl  SSAO.vert.glsl
Shaders/FlxShader/Deferred/SSAOBlur/: SSAOBlur.frag.glsl
Shaders/FlxShader/Forward/BagExplode/: BagExplode.frag.glsl  BagExplode.geo.glsl  BagExplode.vert.glsl
Shaders/FlxShader/Forward/BatchRock/: BatchRock.frag.glsl  BatchRock.vert.glsl
Shaders/FlxShader/Forward/Cube/: Cube.frag.glsl
Shaders/FlxShader/Forward/DebugQuad/: DebugQuad.frag.glsl
Shaders/FlxShader/Forward/Grass/: Grass.frag.glsl  Grass.vert.glsl
Shaders/FlxShader/Forward/Light/: Light.frag.glsl  Light.vert.glsl
Shaders/FlxShader/Forward/Ocean/: Ocean.frag.glsl  Ocean.vert.glsl
Shaders/FlxShader/Forward/OmniShadowReceiver/: OmniShadowReceiver.frag.glsl  OmniShadowReceiver.vert.glsl
Shaders/FlxShader/Forward/Reflect/: Reflect.frag.glsl  Reflect.vert.glsl
Shaders/FlxShader/Forward/Refract/: Refract.frag.glsl  Refract.vert.glsl
Shaders/FlxShader/Forward/ShadowReceiver/: ShadowReceiver.frag.glsl  ShadowReceiver.vert.glsl
Shaders/FlxShader/Forward/SingleColor/: SingleColor.frag.glsl  SingleColor.vert.glsl
Shaders/FlxShader/Forward/SingleDiffuseTex/: SingleDiffuseTex.frag.glsl  SingleDiffuseTex.vert.glsl
Shaders/FlxShader/Forward/SwitchBlinnPhong/: SwitchBlinnPhong.frag.glsl  SwitchBlinnPhong.vert.glsl
Shaders/FlxShader/Forward/shadowWood/: shadowWood.frag.glsl  shadowWood.vert.glsl
Shaders/FlxShader/HDRISkybox/: HDRISkybox.frag.glsl  HDRISkybox.vert.glsl
Shaders/FlxShader/JustRedChannel/: JustRedChannel.frag.glsl  JustRedChannel.vert.glsl
Shaders/FlxShader/PostProcessing/BloomBlur/: BloomBlur.frag.glsl
Shaders/FlxShader/PostProcessing/BrightExtraction/: BrightExtraction.frag.glsl
Shaders/FlxShader/PostProcessing/ColorAddition/: ColorAddition.frag.glsl
Shaders/FlxShader/PostProcessing/ColorCorrection/: ColorCorrection.frag.glsl
Shaders/FlxShader/PostProcessing/PostProcessing/: PostProcessing.frag.glsl  PostProcessing.vert.glsl
Shaders/FlxShader/Shadow/BatchOminidirectionalShadowMap/: BatchOminidirectionalShadowMap.geo.glsl  BatchOminidirectionalShadowMap.vert.glsl
Shaders/FlxShader/Shadow/OminidirectionalShadowMap/: OminidirectionalShadowMap.frag.glsl  OminidirectionalShadowMap.vert.glsl
Shaders/FlxShader/Shadow/ShadowMap/: ShadowMap.vert.glsl
Shaders/FlxShader/Skybox/: Skybox.frag.glsl  Skybox.vert.glsl
Shaders/Includes/: Functions.glsl  Header.glsl
